<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="25dp"
    tools:background="@drawable/gradient_for_background_4x"
    android:paddingHorizontal="17dp">

        <TextView
            android:id="@+id/tvNameTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_name"
            android:fontFamily="@font/jura_regular"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#60AB06"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edNameTraining"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edittext_background_color"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNameTraining"
            android:hint="@string/add_name"
            android:fontFamily="@font/jura_regular"
            android:inputType="textPersonName"
            android:textColor="#60AB06"
            android:textColorHint="@color/text_color"
            android:textSize="16sp" />

        <FrameLayout
            android:id="@+id/flRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:maxHeight="200dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edNameTraining"
            app:layout_constraintBottom_toTopOf="@id/buttonBar"
>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcViewNewTraining"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="16dp"
                android:paddingBottom="86dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_training_list" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/buttonBar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveTraining"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_background"
                android:fontFamily="@font/russo_one_regular"
                android:text="@string/save"
                tools:textColor="#242523"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btnAddNewExercise"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/fab_background"
                android:src="@drawable/ic_add" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>